--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,12 @@
-FROM maven:3.8.6-openjdk-17 AS build
+FROM maven:3.9.3-eclipse-temurin-17-alpine AS build
 WORKDIR /app
-COPY pom.xml ./
+COPY pom.xml .
 RUN mvn dependency:go-offline
 COPY . .
-RUN mvn package
+RUN mvn package -DskipTests
 
-FROM openjdk:17-jdk-slim
+# Stage 2: Use a minimal JRE base to run the Spring Boot app
+FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
