--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 version: '3'
 services:
-
-  frontend:
-    build: ./frontend/market-map-editor
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    volumes:
+      - mongo-data:/data/db
     ports:
-      - "3000:80"
+      - "27017:27017"
+
+  backend:
+    build: ./backend
+    depends_on:
+      - mongodb
+    environment:
+      SPRING_DATA_MONGODB_URI: "mongodb://mongodb:27017/testdb"
+    ports:
+      - "8080:8080"
 
 
 volumes:
