--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
     ports:
       - "8080:8080"
 
+  frontend:
+    build: ./frontend/market-map-editor
+    ports:
+      - "3000:80"
 
 volumes:
   mongo-data:
